--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,39 @@
 h1 {
   font-size: 50px;
+  font-weight: normal;
+  color: white;
+  text-align: center;
+  height: 60px;
+}
+h2 {
+  font-size: 42px;
+  font-weight: 300;
 }
 body {
   font-family: verdana, sans-serif;
+  background-color: black;
+  text-align: center;
+  color: white;
+}
+video {
+  object-fit: contain;
+  align-items: center;
+}
+img {
+  align-items: center;
+}
+.link {
+  color: aquamarine;
+  font-size: 16px;
+  text-decoration: underline;
+  text-decoration-style: solid;
+  height: 25px;
+}
+.footer{
+  text-align: right;
+  display: block;
+}
+p {
+  font-size: 21px;
+  color: Gray;
 }
